add page forwarding

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-test index
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0;url=http://zhanxw.com#software">
+        <script type="text/javascript">
+            window.location.href = "http://zhanxw.com"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow the <a href='http://zhanxw.com'>link to Xiaowei's webpage</a>
+    </body>
+</html>
